@@ -127,9 +127,7 @@ class TTemplateManager extends TModule
  * - directive: directive specifies the property values for the template owner.
  * It is in the format of &lt;% property name-value pairs %&gt;
  * - expressions: They are in the formate of &lt;= PHP expression &gt; and &lt;% PHP statements &gt;
- * - comments: There are two kinds of comments, regular HTML comments and special template comments.
- * The former is in the format of &lt;!-- comments --&gt;, which will be treated as text strings.
- * The latter is in the format of &lt;%* comments %&gt;, which will be stripped out.
+ * - comments: Special template comments enclosed within &lt;!-- comments --!&gt; will be stripped out.
  *
  * Tags other than the above are not required to be well-formed.
  *
@@ -147,13 +145,12 @@ class TTemplate extends TApplicationComponent implements ITemplate
 {
 	/**
 	 *  '<!--.*?--!>' - template comments
-	 *	'<!--.*?-->'  - HTML comments
 	 *	'<\/?com:([\w\.]+)((?:\s*[\w\.]+=\'.*?\'|\s*[\w\.]+=".*?"|\s*[\w\.]+=<%.*?%>)*)\s*\/?>' - component tags
 	 *	'<\/?prop:([\w\.]+)\s*>'  - property tags
 	 *	'<%@\s*((?:\s*[\w\.]+=\'.*?\'|\s*[\w\.]+=".*?")*)\s*%>'  - directives
 	 *	'<%[%#~\\$=\\[](.*?)%>'  - expressions
 	 */
-	const REGEX_RULES='/<!--.*?--!>|<!--.*?-->|<\/?com:([\w\.]+)((?:\s*[\w\.]+=\'.*?\'|\s*[\w\.]+=".*?"|\s*[\w\.]+=<%.*?%>)*)\s*\/?>|<\/?prop:([\w\.]+)\s*>|<%@\s*((?:\s*[\w\.]+=\'.*?\'|\s*[\w\.]+=".*?")*)\s*%>|<%[%#~\\$=\\[](.*?)%>/msS';
+	const REGEX_RULES='/<!--.*?--!>|<\/?com:([\w\.]+)((?:\s*[\w\.]+=\'.*?\'|\s*[\w\.]+=".*?"|\s*[\w\.]+=<%.*?%>)*)\s*\/?>|<\/?prop:([\w\.]+)\s*>|<%@\s*((?:\s*[\w\.]+=\'.*?\'|\s*[\w\.]+=".*?")*)\s*%>|<%[%#~\\$=\\[](.*?)%>/msS';
 
 	/**
 	 * Different configurations of component property/event/attribute
@@ -618,15 +615,11 @@ class TTemplate extends TApplicationComponent implements ITemplate
 				}
 				else if(strpos($str,'<!--')===0)	// comments
 				{
-					if(strrpos($str,'--!>')===strlen($str)-4)  // template comments
-					{
-						if($expectPropEnd)
-							throw new TConfigurationException('template_comments_forbidden');
-						if($matchStart>$textStart)
-							$tpl[$c++]=array($container,substr($input,$textStart,$matchStart-$textStart));
-						$textStart=$matchEnd+1;
-					}
-					// else, HTML comments and we do nothing
+					if($expectPropEnd)
+						throw new TConfigurationException('template_comments_forbidden');
+					if($matchStart>$textStart)
+						$tpl[$c++]=array($container,substr($input,$textStart,$matchStart-$textStart));
+					$textStart=$matchEnd+1;
 				}
 				else
 					throw new TConfigurationException('template_matching_unexpected',$match);
